add token parse and userId column
