# internal/threads/handler.go
@@ -3,31 +3,56 @@ package threads
 import (
 	"net/http"
 
+	"github.com/Potagashev/breddit/internal/config"
+	"github.com/Potagashev/breddit/internal/utils"
 	"github.com/gin-gonic/gin"
 	"github.com/google/uuid"
 )
 
 type ThreadHandler struct {
 	ThreadService *ThreadService
+	Cfg *config.Config
 }
 
-func NewThreadHandler(threadService *ThreadService) *ThreadHandler {
-	return &ThreadHandler{ThreadService: threadService}
+func NewThreadHandler(threadService *ThreadService, cfg *config.Config) *ThreadHandler {
+	return &ThreadHandler{ThreadService: threadService, Cfg: cfg}
 }
 
 // @Summary Create thread
 // @Tags threads
 // @Param requestBody body ThreadWrite true "Create data"
+// @Param Access-Token header string true "Access Token"
 // @Success 201 {object} ThreadWriteResponse
 // @Router /threads [post]
 func (h *ThreadHandler) CreateThread(c *gin.Context) {
+	authHeader := c.GetHeader("Access-Token")
+	if authHeader == "" {
+		c.JSON(http.StatusUnauthorized, gin.H{"error": "Missing Access-Token header"})
+		return
+	}
+
+	const bearerPrefix = "Bearer "
+	if len(authHeader) <= len(bearerPrefix) || authHeader[:len(bearerPrefix)] != bearerPrefix {
+		c.JSON(http.StatusUnauthorized, gin.H{"error": "Invalid Authorization header format"})
+		return
+	}
+
+	tokenString := authHeader[len(bearerPrefix):]
+
+	user, errr := utils.ParseToken(tokenString, *h.Cfg)
+
+	if errr != nil {
+		c.JSON(http.StatusUnauthorized, gin.H{"error": "Invalid or expired token"})
+		return
+	}
+
 	var thread ThreadWrite
 	if err := c.ShouldBindJSON(&thread); err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid request payload"})
 		return
 	}
 
-	var threadId, err = h.ThreadService.CreateThread(&thread)
+	var threadId, err = h.ThreadService.CreateThread(&thread, user.UserId)
 	if err != nil {
 		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		return
